--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "module": "lib/node-addon.js",
   "type": "module",
   "scripts": {
-    "build": "echo building...; make",
-    "build:watch": "ls src/* | entr npm run build",
-    "debug": "",
-    "dev": "npm-run-all --silent rebuild --parallel build:watch test:watch",
-    "rebuild": "make clean all",
-    "reset": "rm -rf node_modules package-lock.json build",
-    "test": "echo testing...; node --experimental-addon-modules --no-warnings=ExperimentalWarning ./test/test-addon.js",
-    "test:watch": "find package.json lib test build/*.node -type f | entr npm run test"
+    "build": "make",
+    "build-watch": "make build-watch",
+    "clean": "make clean",
+    "dev": "make dev",
+    "make": "make",
+    "npm-reset": "rm -rf node_modules package-lock.json",
+    "test": "make test",
+    "test-watch": "make test-watch"
   },
   "dependencies": {
     "node-addon-api": "^1.1.0"
